# call-python-via-msgpack

./: .gitignore  README.md  call-python-via-msgpack.cabal  stack.yaml
exampleparentmodule/: examplemodule27.py
src/FFI/Python/: MessagePack.hs
test/: Main.hs
